added post deletion and following

--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -5,38 +5,51 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Post</button>
+    <button type="submit" name="post_submit">Post</button>
 </form>
 <hr>
 {% for post in posts %}
 <div style="margin-bottom: 20px;">
 <strong>{{ post.author.userame }}</strong> <small>{{post.created_at|date:"d.m.Y H:i"}}</small><br>
 <p>
-    <a href="{% url 'profile' post.author.username %}">
+    <a href="{% url 'profile' post.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
         <strong>{{ post.author.username }}</strong>
     </a>: {{post.content}}
 </p>
 {% if post.image %}
-<img src="{{post.image.url}}" width="300">
+<img src="{{post.image.url}}" width="300" alt="post image" style="border-radius: 5px;">
+    
+{% endif %}
+
+{% if post.author == user %}
+    <form action="{% url 'delete_post' post.id %}" method="post" style="display: inline;">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-sm btn-link text-danger" 
+        onclick="return confirm('Are you sure you want to delete this post?');">Delete</button>
+    </form>
+    <!-- <a href="{% url 'delete_post' post.id %}" class="btn btn-sm btn-danger"
+    onclick="return confirm('Are you sure you want to delete this post?');">Delete</a> -->
 {% endif %}
 <!-- <p>❤️ {{ post.likes.count }} likes</p> -->
-<p class="mt-2 text-muted" style="font-size: 14px;">
-    <form action="{% url 'toggle_like' post.id %}">
-        {% csrf_token %}
-        {% if user in post.likes.all %}
-        <button type="submit" style="border: none; background: none; color: red;">❤️</button>
-        {% else %}
-        <button type="submit" style="border: none; background: none; color: gray;">🤍</button>
-        {% endif %}
-        {{ post.likes.count }} likes
-    </form>
-</p>
+<p class="mt-2 text-muted" style="font-size: 14px;"></p>
+<form action="{% url 'toggle_like' post.id %}">
+    {% csrf_token %}
+    {% if user in post.likes.all %}
+    <button type="submit" style="border: none; background: none; color: red;">❤️</button>
+    {% else %}
+    <button type="submit" style="border: none; background: none; color: gray;">🤍</button>
+    {% endif %}
+    {{ post.likes.count }} likes
+</form>
+
 </div>
 <div class="mt-2">
     {% for comment in post.comments.all %}
     <div style="font-size: 14px;">
         <p>
-            {{comment.content}}
+            <a href="{% url 'profile' comment.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
+                <strong>{{ comment.author.username }}</strong>
+            </a>: {{comment.content}}
             {% if comment.author == user %}
             <a href="{% url 'edit_comment' comment.id %}" class="btn btn-link btn-sm">Edit</a>
             {% endif %}
