--- a/network/templates/base.html
+++ b/network/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SocialNet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body>
+<body style="padding: 5px 30px; color: rgb(60, 104, 111); ">
     {% if user.is_authenticated %}
         <!-- <p>You are logged in as {{user.username}} | <a href="{% url 'logout' %}">Log out</a></p> -->
         <form action="{% url 'logout' %}" method="post" style="display: inline;">
             {% csrf_token %}
-            <button type="submit" class="btn btn-link p-0 m-0 align-baseline">Log out</button>
+            <button type="submit" class="btn btn-link p-0 m-0 align-baseline" style="text-decoration: underline; color: rgb(83, 155, 161);">Log out</button>
     </form>
     {% else %}
-        <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'signup' %}">Sign up</a></p>
+        <p><a href="{% url 'login' %}" style="text-decoration: underline; color: rgb(83, 155, 161);">Login</a> | <a href="{% url 'signup' %}" style="text-decoration: underline; color: rgb(83, 155, 161);">Sign up</a></p>
     {% endif %}
 
 
