--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -3,24 +3,25 @@
 <div class="container mt-4" style="max-width: 600px;">
     <div class="d-flex align-items-center mb-4">
         {% if profile.avatar %}
-        <img src="{{ profile.avatar.url }}" class="rounded-circle" style="width: 80px; height: 80px; object-fit: cover;">
+        <img src="{{ profile.avatar.url }}" class="rounded-circle" style="width: 80px; height: 80px; object-fit: cover; margin: 5px;">
         {%else%}
         <img src="media/baseavatar.jpg" class="rounded-circle">
         {% endif %}
-        {% if profile_user == user %}
-        <a href="{% url 'edit_profile' %}" class="btn btn-secondary btn-sm">Edit Profile</a>
-        {% endif %}
+        
         <div class="ms-3">
-            <h4>{{ profile.username }}</h4>
-            <p class="text-muted">{{ profile.bio }}</p>
-            <p>
+            <p style="font-size: 25px; color: rgb(83, 155, 161); margin-bottom: 0;">{{ profile_user.username }}</p>
+            <p style="margin-bottom: 0;">
                 <strong>{{ profile.followers.count }}</strong> followers
                 <strong>{{ profile_user.following.count }}</strong> follows
             </p>
+            <p class="text-muted" style="margin-bottom: 2px;">{{ profile.bio }}</p>
+            {% if profile_user == user %}
+                <a href="{% url 'edit_profile' %}" class="btn btn-secondary btn-sm">Edit Profile</a>
+            {% endif %}
             {% if profile_user != user %}
-            <form method="post" >
+            <form method="post" action="{% url 'follow_toggle' profile_user.username %}">
                 {% csrf_token %}
-                {% if is_following %}
+                {% if user in profile.followers.all %}
                 <button class="btn btn-outline-danger btn-sm">Unfollow</button>
                 {% else %}
                 <button class="btn btn-primary btn-sm">Follow</button>
@@ -34,7 +35,7 @@
     <div class="mb-4">
         <p>{{ post.content }}</p>
         {% if post.image %}
-        <img src="{{ post.image.url }}" class="img-fluid-rounded">
+        <img src="{{ post.image.url }}" class="img-fluid-rounded" style="width: 300px; border-radius: 5px;">
         {% endif %}
         <p class="text-muted" style="font-size: 14px;">{{ post.created_at|date:"d.m.Y H:i" }}</p>
     </div>
