--- a/network/templates/base.html
+++ b/network/templates/base.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body style="padding: 5px 30px; color: rgb(60, 104, 111); ">
+<body style="padding: 5px 30px; color: rgb(60, 104, 111); " class="bg-dark text-light">
     {% if user.is_authenticated %}
         <!-- <p>You are logged in as {{user.username}} | <a href="{% url 'logout' %}">Log out</a></p> -->
         <form action="{% url 'logout' %}" method="post" style="display: inline;">
