--- a/static/style.css
+++ b/static/style.css
@@ -40,3 +40,32 @@ a{
     text-decoration: none;
     color: rgb(83, 155, 161);
 }
+
+body{
+    background-color: #121212;
+    color: #e0e0e0;
+}
+
+a{
+    color:#91cfff;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+.card{
+    background-color: #1e1e1e;
+    border: none;
+    border-radius: 12px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.card img{
+    border-radius: 10px;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
