--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -10,76 +10,83 @@
 <hr>
 <div class="container mt-4" style="max-width: 600px;">
 
-{% for post in posts %}
-<div style="margin-bottom: 20px;" class="card">
+    {% for post in posts %}
+    <div style="margin-bottom: 20px; background-color: #1e1e1e;
+    border: none;
+    border-radius: 12px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    color: aliceblue;" class="card">
 
-<div class="d-flex align-items-center justify-content-between mb-2">
-    <a href="{% url 'profile' post.author.username %}" class="fw-bold text-light">
-        {{ post.author.username }}
-    </a>
-    <small class="text-muted">{{post.created_at|date:"d.m.Y H:i"}}</small>
-</div>
-<!-- <strong>{{ post.author.userame }}</strong> <small>{{post.created_at|date:"d.m.Y H:i"}}</small><br>
-<p>
-    <a href="{% url 'profile' post.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
-        <strong>{{ post.author.username }}</strong>
-    </a>: {{post.content}}
-</p> -->
-{% if post.image %}
-<img src="{{post.image.url}}" width="300" alt="post image" style="border-radius: 5px;">
-    
-{% endif %}
-<p class="mb-1">{{post.content}}</p>
-
-<form action="{% url 'toggle_like' post.id %}">
-    {% csrf_token %}
-    {% if user in post.likes.all %}
-    <button type="submit" style="border: none; background: none; color: red;">❤️</button>
-    {% else %}
-    <button type="submit" style="border: none; background: none; color: gray;">🤍</button>
-    {% endif %}
-    {{ post.likes.count }} likes
-</form>
-
-<div class="mt-2">
-    {% for comment in post.comments.all %}
-    <div style="font-size: 14px;">
+        <div class="d-flex align-items-center justify-content-between mb-2">
+            <a href="{% url 'profile' post.author.username %}" class="fw-bold text-light">
+                {{ post.author.username }}
+            </a>
+            <small class="text-muted">{{post.created_at|date:"d.m.Y H:i"}}</small>
+        </div>
+        <!-- <strong>{{ post.author.userame }}</strong> <small>{{post.created_at|date:"d.m.Y H:i"}}</small><br>
         <p>
-            <a href="{% url 'profile' comment.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
-                <strong>{{ comment.author.username }}</strong>
-            </a>: {{comment.content}}
-            {% if comment.author == user %}
-            <a href="{% url 'edit_comment' comment.id %}" class="btn btn-link btn-sm">Edit</a>
+            <a href="{% url 'profile' post.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
+                <strong>{{ post.author.username }}</strong>
+            </a>: {{post.content}}
+        </p> -->
+        {% if post.image %}
+        <img src="{{post.image.url}}" width="300" alt="post image" style="border-radius: 5px;">
+            
+        {% endif %}
+        <p class="mb-1">{{post.content}}</p>
+
+        <form action="{% url 'toggle_like' post.id %}">
+            {% csrf_token %}
+            {% if user in post.likes.all %}
+            <button type="submit" style="border: none; background: none; color: red;">❤️</button>
+            {% else %}
+            <button type="submit" style="border: none; background: none; color: gray;">🤍</button>
             {% endif %}
-        </p> 
+            {{ post.likes.count }} likes
+        </form>
+
+        <div class="mt-2">
+            {% for comment in post.comments.all %}
+            <div style="font-size: 14px;">
+                <p>
+                    <a href="{% url 'profile' comment.author.username %}" style="text-decoration: underline; color: rgb(83, 155, 161);">
+                        <strong>{{ comment.author.username }}</strong>
+                    </a>: {{comment.content}}
+                    {% if comment.author == user %}
+                    <a href="{% url 'edit_comment' comment.id %}" class="btn btn-link btn-sm">Edit</a>
+                    {% endif %}
+                </p> 
+            </div>
+            {% empty %}
+            <small class="text-muted">No comments yet</small>
+            {% endfor %}
+        </div>
+
+        {% if post.author == user %}
+            <form action="{% url 'delete_post' post.id %}" method="post" >
+                {% csrf_token %}
+                <button type="submit" class="btn btn-sm btn-link text-danger" 
+                onclick="return confirm('Are you sure you want to delete this post?');">Delete</button>
+                <a href="{% url 'edit_post' post.id %}" class="btn btn-sm btn-warning">Edit</a>
+            </form>
+            <!-- <a href="{% url 'delete_post' post.id %}" class="btn btn-sm btn-danger"
+            onclick="return confirm('Are you sure you want to delete this post?');">Delete</a> -->
+        {% endif %}
+        <!-- <p>❤️ {{ post.likes.count }} likes</p> -->
+        <p class="mt-2 text-muted" style="font-size: 14px;"></p>
+
+
     </div>
-    {% empty %}
-    <small class="text-muted">No comments yet</small>
+
+    <form method="post" class="mt-2">
+        {% csrf_token %}
+        {{comment_form.content}}
+        <input type="hidden" name="post_id" value="{{post.id}}">
+        <button type="submit" name="comment_submit" class="btn btn-sm btn-outline-primary mt-1">Comment</button>
+    </form>
     {% endfor %}
 </div>
 
-{% if post.author == user %}
-    <form action="{% url 'delete_post' post.id %}" method="post" style="display: inline;">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-sm btn-link text-danger" 
-        onclick="return confirm('Are you sure you want to delete this post?');">Delete</button>
-        <a href="{% url 'edit_post' post.id %}" class="btn btn-sm btn-warning">Edit</a>
-    </form>
-    <!-- <a href="{% url 'delete_post' post.id %}" class="btn btn-sm btn-danger"
-    onclick="return confirm('Are you sure you want to delete this post?');">Delete</a> -->
-{% endif %}
-<!-- <p>❤️ {{ post.likes.count }} likes</p> -->
-<p class="mt-2 text-muted" style="font-size: 14px;"></p>
-
-
-</div>
-
-<form method="post" class="mt-2">
-    {% csrf_token %}
-    {{comment_form.content}}
-    <input type="hidden" name="post_id" value="{{post.id}}">
-    <button type="submit" name="comment_submit" class="btn btn-sm btn-outline-primary mt-1">Comment</button>
-</form>
-</div>
-{% endfor %}
 {% endblock %}
