--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<div class="container d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <div class="card p-4 bg-dark text-light" style="min-width: 300px; max-width: 400px;">
+        <h2 class="mb-4 text-center">Login</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary w-100 mt-2">Login</button>
+        </form>
+        <div class="mt-3 text-center">
+            <small>Don't have an account? <a href="{% url 'signup' %}">Sign up</a></small>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
