--- a/network/templates/network/signup.html
+++ b/network/templates/network/signup.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="d-flex justify-content-center align-items-center mt-5">
-    <div class="card p-4 shadow-sm" style="max-width: 400px;">
+    <div class="card p-4 shadow-sm" style="max-width: 400px; color: white;">
         <h2 class="text-center mb-4">Sign up</h2>
     
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-success w-100">Create Account</button>
+            <button type="submit" class="btn btn-primary w-100 mt-2">Create Account</button>
         </form>
         <hr>
         <p class="text-center">
