added chat function

--- a/network/templates/messages/chat.html
+++ b/network/templates/messages/chat.html
@@ -4,17 +4,23 @@
     <h4 class="mb-3">Chat with {{other_user.username}}</h4>
     <div class="bg-dark p-3 rounded mb-3" style="height: 400px; overflow-y: auto;">
         {% for message in messages %}
-        <div class="mb-2 {% if message.sender == user %}text-end{% endif %}">
+        <div class="mb-2 {% if message.sender == user %}text-end{% endif %}" style="padding: 5px; background-color: rgb(83, 155, 161); border-radius: 5px;">
             <span class="d-block fw-bold" style="font-size: 14px;">{{message.sender.username}}</span>
-            <span>{{message.content}}</span><br>
+            {% if message.content %}
+                <span>{{message.content}}</span><br>
+            {% endif %}
+            {% if message.image %}
+                <img src="{{ message.image.url }}" style="max-width: 200px; border-radius: 6px;"><br>
+            {% endif %}
             <small class="text-muted">{{message.timestamp|date:"H:i d.m.Y"}}</small>
         </div>
         {% endfor %}
     </div>
-    <form action="{% ur 'send_message' other_user.username %}">
-        {% csrf.token %}
+    <form action="{% url 'send_message' other_user.username %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         <div class="input-group">
             <input type="text" name="content" class="form-control" placeholder="Type a message..." required>
+            <input type="file" name="image" class="form-control">
             <button class="btn btn-primary">Send</button>
         </div>
     </form>
