--- a/network/templates/network/notifications.html
+++ b/network/templates/network/notifications.html
@@ -6,13 +6,13 @@
         {% for notif in notifications %}
             <li class="list-group-item">
                 {% if notif.notification_type == 'like' %}
-                    {{ notif.from_user_username }} liked your post.
+                    <a href="{% url 'post_detail' notif.post.id %}"><strong>{{ notif.from_user.username }} liked your post.</strong></a>
                 {% elif notif.notification_type == 'comment' %}
-                    {{ notif.from_user_username }} commented on your post.
+                    <a href="{% url 'post_detail' notif.post.id %}"><strong>{{ notif.from_user.username }} commented on your post.</strong></a>
                 {% elif notif.notification_type == 'message' %}
-                    New message from {{ notif.from_user_username }}.
+                    <a href="{% url 'chat' notif.from_user.username %}"><strong>New message from {{ notif.from_user.username }}.</strong></a>
                 {% elif notif.notification_type == 'follow' %}
-                    {{ notif.from_user_username }} followed you.
+                    <a href="{% url 'profile' notif.from_user.username %}"><strong>{{ notif.from_user.username }} followed you.</strong></a>
                 {% endif %}
                 <br><small class="text-muted">{{ notif.created_at|date:"d.m.Y H:i" }}</small>
             </li>
