--- a/network/templates/base.html
+++ b/network/templates/base.html
@@ -37,12 +37,26 @@
     <hr>
 
     {% if messages %}
-        {% for message in messages %}
-            <div>{{message}}</div>
-        {% endfor %}
+    <div aria-live="polite" aria-automic="true" class="position-relative">
+        <div class="toast-container position-fixed top-0 end-0 p-3">
+            {% for message in messages %}
+                <div class="toast show bg-dark text-light" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <strong class="me-auto">Notice</strong>
+                        <small>Now</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">{{message}}</div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+        
     {% endif %}
 
     {% block content %}
     {% endblock %}
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
