--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -46,6 +46,14 @@
             {% endif %}
             {{ post.likes.count }} likes
         </form>
+        <form action="{% url 'toggle_save' post.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
+            {% if post in request.user.saved_posts.values_list('post', flat=True) %}
+                <button type="submit" class="btn btn-sm btn0outline-warning">Unsave</button>
+            {% else %}
+                <button type="submit" class="btn btn-sm btn0outline-light">Save</button>
+            {% endif %}
+        </form>
 
         <div class="mt-2">
             {% for comment in post.comments.all %}
@@ -56,7 +64,30 @@
                     </a>: {{comment.content}}
                     {% if comment.author == user %}
                     <a href="{% url 'edit_comment' comment.id %}" class="btn btn-link btn-sm">Edit</a>
-                    <a href="{% url 'delete_comment' comment.id %}" class="btn btn-link btn-sm text-danger">Delete</a>
+                    <button type="button" class="btn btn-link btn-sm text-danger" data-bs-toggle="modal" data-bs-target="#deleteCommentModal{{ comment.id }}">Delete</button>
+                    <div class="modal fade" id="deleteCommentModal{{ comment.id }}" tabindex="-1" aria-labelledby="deleteModalLabel{{ comment.id }}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content bg-dark text-light">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel{{ comment.id }}">Confirm Delete</h5>
+                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this comment?
+                                    <blockquote class="blockquote mt-2">
+                                        <p class="mb-0">{{ comment.content }}</p>
+                                    </blockquote>
+                                </div>
+                                <div class="modal-footer">
+                                    <form action="{% url 'delete_comment' comment.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger">Delete</button>
+                                    </form>
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     {% endif %}
                 </p> 
             </div>
