--- a/network/templates/base.html
+++ b/network/templates/base.html
@@ -32,6 +32,7 @@
     
     <p style="margin-bottom: 0px; text-align: right;"><a href="{% url 'inbox' %}" style="text-decoration: underline; color: rgb(83, 155, 161);">Inbox</a></p>
     <p style="margin-bottom: 5px; text-align: right;"><a href="{% url 'feed' %}" style="text-decoration: underline; color: rgb(83, 155, 161);">Feed</a></p>
+    <p style="text-align: right;"><a href="{% url 'saved_posts' %}" style="text-decoration: underline; color: rgb(83, 155, 161);">Saved</a></p>
 
 
     <hr>
@@ -56,7 +57,7 @@
 
     {% block content %}
     {% endblock %}
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
