--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -44,7 +44,7 @@
     <p>No posts yet</p>
     {% endfor %}
 
-    <p><strong>Saved posts:</strong> {{ saved_count }}</p>
-    <a href="{% url 'saved_posts' username=profile_user.username %}">View Saved Posts</a>
+    <p><strong><a href=" {% url 'saved_posts' %}">Saved posts:</a></strong> {{ saved_count }}</p>
+    <a href="{% url 'saved_posts' %}">View Saved Posts</a>
 </div>
 {% endblock %}
