--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -49,9 +49,9 @@
         <form action="{% url 'toggle_save' post.id %}" method="post" style="display: inline;">
             {% csrf_token %}
             {% if post.id in saved_post_ids %}
-                <button type="submit" class="btn btn-sm btn-outline-warning">Unsave</button>
+                <button type="submit" class="btn btn-sm btn-outline-warning" style="margin: 5px 0;">Unsave</button>
             {% else %}
-                <button type="submit" class="btn btn-sm btn-outline-light">Save</button>
+                <button type="submit" class="btn btn-sm btn-outline-light" style="margin: 5px 0;">Save</button>
             {% endif %}
         </form>
 
@@ -107,9 +107,6 @@
             onclick="return confirm('Are you sure you want to delete this post?');">Delete</a> -->
         {% endif %}
         <!-- <p>❤️ {{ post.likes.count }} likes</p> -->
-        <p class="mt-2 text-muted" style="font-size: 14px;"></p>
-
-
     </div>
 
     <form method="post" class="mt-2">
