--- a/network/templates/base.html
+++ b/network/templates/base.html
@@ -59,5 +59,11 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function toggleReplyForm(commentId){
+            const form = document.getElementById('reply-form-' + commentId);
+            form.style.display = (form.style.display === 'none') ? 'block' : 'none';
+        }
+    </script>
 </body>
 </html>
