--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -11,13 +11,13 @@
 <div class="container mt-4" style="max-width: 600px;">
 
     {% for post in posts %}
-    <div style="margin-bottom: 20px; background-color: #1e1e1e;
+    <div style="margin-bottom: 20px; background-color: var(--bg-color);
     border: none;
     border-radius: 12px;
     padding: 15px;
     margin-bottom: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    color: aliceblue;" class="card">
+    color: var(--text-color)" class="card">
 
         <div class="d-flex align-items-center justify-content-between mb-2">
             <a href="{% url 'profile' post.author.username %}" class="fw-bold text-light">
