--- a/network/templates/network/feed.html
+++ b/network/templates/network/feed.html
@@ -20,7 +20,7 @@
     color: var(--text-color)" class="card">
 
         <div class="d-flex align-items-center justify-content-between mb-2">
-            <a href="{% url 'profile' post.author.username %}" class="fw-bold text-light">
+            <a href="{% url 'profile' post.author.username %}" class="fw-bold text-light" style="color: var(--link-color);">
                 {{ post.author.username }}
             </a>
             <small class="text-muted">{{post.created_at|date:"d.m.Y H:i"}}</small>
